[package]
name = "wasm-datepicker"
version = "0.1.0"
authors = ["averichev <averichev@yandex.ru>"]
edition = "2018"
repository = "https://github.com/averichev/wasm-datepicker"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
web-sys = { version = "0.3.65", features = ["Window", "Element", "HtmlElement", "Document", "MouseEvent"] }
wasm-bindgen = {version = "0.2.88"}
yew = "0.21.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
yew-datepicker = "0.1.0"
chrono = "0.4.31"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
