[package]
name = "wasm-datepicker"
version = "0.1.0"
authors = ["averichev <averichev@yandex.ru>"]
edition = "2018"
repository = "https://github.com/averichev/wasm-datepicker"
description = "Datepicker wasm component"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web-sys = { version = "0.3.65", features = ["Window", "Element", "HtmlElement", "Document", "MouseEvent"] }
wasm-bindgen = {version = "0.2.88"}
yew = "0.21.0"
yew-datepicker = "0.1.0"
chrono = "0.4.31"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
